<resources>
    <string name="app_name">PacketFlagon</string>

    <string name="title_section1">Welcome</string>
    <string name="title_section2">Create PAC</string>
    <string name="title_section3">View Your PACs</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navDrawerIntro">This platform enables those in the UK with censored Internet connections to bypass these filters by building customised PAC files to selectively route certain websites via uncensored proxies.
\n\nThis service is provided for free and without adverts. </string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- Main Fragment -->
    <string name="welcome">Welcome to PacketFlagon!</string>
    <string name="welcome_1">Bypassing UK Internet Censorship</string>
    <string name="welcome_2"><![CDATA[
    You can add an existing PAC by tapping the button at the bottom or create a new PAC by tapping the top left.
    <br/><br/><strong>Remember:</strong> Proxies <em>could</em> be used to spy on your browsing traffic!
    <br/><br/>Consider learning how to use Tor securely instead; https://torproject.org
    ]]>
    </string>

    <!-- Create PAC -->
    <string name="nameLabel">Friendly Name</string>
    <string name="descLabel">PAC Description</string>
    <string name="passwordLabel">PAC Password</string>
    <string name="passwordHint">(Optional)</string>
    <string name="urlLabel">URL List</string>
    <string name="urlHint">e.g. reddit.com, google.com</string>
    <string name="localProxyLabel">Use local proxy?</string>
    <string name="pacSuccessToast">PAC successfully created; </string>
    <string name="pacFailureToast">PAC creation failed. Response; </string>

    <!-- Manage PAC -->
    <string name="pushToS3">Push to S3</string>
    <string name="getPACURL">Get PAC URL</string>
    <string name="pushToS3Success">S3 URL Added to Clipboard</string>
    <string name="pushToS3Fail">S3 Push Failed. Response: </string>
    <string name="descHolder">...</string>
    <string name="getPACFail">Fetching PAC details failed. Response was; </string>
    <string name="getPACURLToast">The PAC URL has been added to your copy + paste clipboard</string>
    <string name="sharePACURL">Share PAC</string>
    <string name="pacPasswordHint">Password to edit PAC</string>
    <string name="removeURLTitle">Remove URL From PAC?</string>
    <string name="removeURLMessage">Do you wish to remove this URL from the PAC file?</string>
    <string name="removeURLOK">Remove URL</string>
    <string name="removeURLCancel">No, Keep URL</string>
    <string name="removeURLSuccess">URL Removed From PAC\n\nYour Browser cache may take some time to see this change</string>
    <string name="removeURLFail">Failed to remove the URL from the PAC; </string>

    <string name="addURLTitle">Add URL to PAC?</string>
    <string name="addURLMessage"><![CDATA[
    Add your URL <em>without</em> the http:// part.\n\n<br/><br/>e.g. just <strong>google.com</strong>
    ]]></string>
    <string name="addURLOK">Add URL</string>
    <string name="addURLCancel">Cancel</string>
    <string name="addURLSuccess">URL Added To PAC\n\nYour Browser cache may take some time to see this change</string>
    <string name="addURLFail">Failed to add the URL to the PAC; </string>

    <!-- Quick Add PAC -->
    <string name="quickAddTitle">Add An Existing PAC</string>
    <string name="quickAddDesc"><![CDATA[
    Enter the 32 character ID of your PAC file to add it to the app for managing.<br/><br/>
    The ID looks something like;<br/><br/>
    <strong>b718ce9b276bc2f10af90fe1d5b33c0d</strong>
    ]]>
    </string>
    <string name="quickAddPrompt">e.g b718ce9b276bc2f10af90</string>
    <string name="quickAddButon">Add PAC</string>
    <string name="quickAddSuccess">Successfully fetched the meta data for</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
